<resources>
    <string name="app_name">Woof</string>

    <!-- Strings related to login -->
    <string name="login_title">Welcome to Woof!</string>
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="prompt_family_name">Family Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cancel_sign_up">Cancel</string>

    <!-- Strings related to settings -->
    <string name="update_profile_button">Update Profile</string>
    <string name="delete_button">Delete Account</string>
    <string name="prompt_new_email">New Email</string>

    <!-- Strings related to profile -->
    <string name="update_profile">Edit Profile Information:</string>
    <string name="update_email">Update Email</string>
    <string name="update_fName">Update First Name</string>>
    <string name="update_lName">Update Last Name</string>
    <string name="update_password">Update Password</string>
    <string name="update_dName">Update Username</string>
    <string name="delete_confirm">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reauth_text">Please re-authenticate your log in before updating your profile</string>
    <string name="reauthenticate">Re-authenticate</string>

    <!-- Strings related to Dog Home screen -->
    <string name="dog_information_button">Dog Information</string>
    <string name="activity_schedule_button">Activity Schedule</string>
    <string name="activity_history_button">Activity History</string>
    <string name="owners_caretakers_button">Owners/Caretakers</string>
    <string name="saved_meals_button">Saved Meals</string>
    <string name="report_lost_button">Report As Lost</string>
    <string name="back_button">Back</string>
    <string name="delete_dog_button">Delete Dog</string>

    <!-- Strings related to Dog Information screen -->
    <string name="dog_information_prompt">Update dog information</string>
    <string name="dog_id">Dog I.D.</string>
    <string name="dog_name">Dog Name</string>
    <string name="save_changes_button">Save Changes</string>

    <!-- Strings related to home screen -->
    <string name="map_button">Map</string>
    <string name="finish_walk_button">Finish Walk</string>
    <string name="new_activity_button">New Activity</string>
    <string name="manage_dogs_button">Manage Dogs</string>
    <string name="add_dog_button">Add Dog</string>
    <string name="family_button">Family</string>
    <string name="settings_button">Settings</string>
    <string name="log_out_button">Log Out</string>

    <!-- Strings related to New Activity -->
    <string name ="continue_button"></string>
    <string-array name = "activity_types">
        <item>Walk</item>
        <item>Food</item>
        <item>Water</item>
        <item>Bathroom</item>
        <item>Vet Visit</item>
    </string-array>

    <string-array name = "food_metrics">
        <item>Oz</item>
        <item>Cups</item>
    </string-array>

    <string-array name = "bathroom_type">
        <item>Pee</item>
        <item>Poop</item>
        <item>Both</item>
    </string-array>

    <!-- Strings related to NewDogFragment -->
    <string name="new_dog_prompt">Enter Information For New Dog</string>
    <string name="family">Family</string>

    <!-- Strings related to Maps-->
    <string name="mapbox_key">pk.eyJ1IjoiYnVja2V5ZWRyYWtlIiwiYSI6ImNqbnh3cnBvdTBocTUzcG1rNHhmNDViaXQifQ.wN5uJWha3y_wSVp1d0yGzA</string>
    <string name="directions">To plan a route, tap up to 12 spots along the desired route. To clear the points, long press on the screen.</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="begin_walk">Begin Walk</string>

    <!-- Strings related to FamilyMainFragment -->
    <string name="families_button">Families</string>
    <string name="invitations_button">Invitations</string>
    <string name="create_new_family_button">Create New Family</string>

    <!-- Strings related to FamilySelectionFragment -->
    <string name="coordinator_indicator">You are the coordinator for this family</string>
    <string name="no_families">No families to display</string>

    <!-- Strings related to FamilyHomeFragment -->
    <string name="family_members_button">Family Members</string>
    <string name="dogs_button">Dogs</string>
    <string name="invite_new_member_button">Invite New Member</string>
    <string name="edit_family_info_button">Edit Family Info</string>
    <string name="leave_family_button">Leave Family</string>

    <!-- Strings related to InviteFamilyMemberFragment -->
    <string name="enter_email_prompt">Enter email address of user:</string>
    <string name="find_user_button">Find User</string>
    <string name="invite_button">Invite</string>
    <string name="user_not_found">User not found</string>

    <!-- Strings related to EditFamilyInfoFragment -->
    <string name="family_name">Family Name</string>

    <!-- Strings related to LeaveFamilyFragment -->
    <string name="leave_family_question">Are you sure you want to leave this family?</string>

    <!-- Strings related to FamilyInvitationsFragment -->
    <string name="invited_you"> invited you</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="no_invitations">No invitations to display</string>

    <!-- Strings related to FamilyMembersFragment -->
    <string name="remove_button">Remove</string>
    <string name="coordinator">(coordinator)</string>
    <string name="no_family_members">No family members to display</string>

    <!-- Strings related to CreateNewFamilyFragment -->
    <string name="family_name_prompt">Enter new family name:</string>
    <string name="create_button">Create</string>

    <!--Strings related to DogSelectionFragment -->
    <string name="no_dogs">No dogs to display</string>

</resources>
